--- a/templates/myapp/question.html
+++ b/templates/myapp/question.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вопрос</title>
+    <!-- Подключение Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .answer-btn {
@@ -18,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>{{ question.text }}</h1>
+        <h1 class="mt-3 mb-3 text-center">Номер вопроса:{{ question.text }}</h1>
         <form id="answerForm" method="post">
             {% csrf_token %}
             <input type="hidden" id="id_answer" name="answer" value="">
@@ -36,6 +39,7 @@
         </form>
     </div>
 
+    <!-- Подключение скриптов Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         function selectAnswer(button) {
@@ -53,7 +57,7 @@
             // Автоматически отправляем форму через 500 мс (можно убрать задержку)
             setTimeout(() => {
                 submitForm();
-            }, 500);
+            }, 100);
         }
 
         function submitForm() {
