--- a/templates/myapp/results.html
+++ b/templates/myapp/results.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Результаты</title>
+    <!-- Подключение Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Центрирование контента */
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 90vh;
+        }
+    </style>
 </head>
 <body>
-    <h1>Результаты для {{ result.name }}</h1>
-    <p>Шкала A: {{ result.scale_a }}</p>
-    <p>Шкала B: {{ result.scale_b }}</p>
-    <p>Шкала C: {{ result.scale_c }}</p>
-    <p>Шкала D: {{ result.scale_d }}</p>
-    <p>Шкала E: {{ result.scale_e }}</p>
+    <div class="container">
+        <div class="card p-3 shadow-sm w-75">
+            <h1 class="mb-3 text-center">Результаты для {{ result.name }}</h1>
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Шкала A: <span class="badge bg-success rounded-pill">{{ result.scale_a }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Шкала B: <span class="badge bg-info rounded-pill">{{ result.scale_b }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Шкала C: <span class="badge bg-warning rounded-pill">{{ result.scale_c }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Шкала D: <span class="badge bg-danger rounded-pill">{{ result.scale_d }}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Шкала E: <span class="badge bg-primary rounded-pill">{{ result.scale_e }}</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Подключение скриптов Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
