--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -14,6 +14,12 @@
             align-items: center;
             height: 90vh;
         }
+
+        @media (max-width: 576px) {
+            .w-50 {
+                width: 100% !important;
+            }
+        }
     </style>
 </head>
 <body>
